[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://Inventory.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
border_width_right = 1
border_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
border_width_left = 1
border_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[node name="Inventory" type="ColorRect"]
margin_top = 500.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.196078, 0.196078, 0.196078, 1 )
script = ExtResource( 2 )

[node name="Scroll" type="ScrollContainer" parent="."]
margin_left = 50.0
margin_right = 974.0
margin_bottom = 112.0
scroll_vertical_enabled = false

[node name="Container" type="HBoxContainer" parent="Scroll"]
theme = ExtResource( 1 )

[node name="Left" type="Button" parent="."]
margin_right = 50.0
margin_bottom = 100.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "<"

[node name="Right" type="Button" parent="."]
margin_left = 974.0
margin_right = 1024.0
margin_bottom = 100.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = ">"

[connection signal="button_down" from="Left" to="." method="_on_Left_button_down"]
[connection signal="button_up" from="Left" to="." method="_on_Left_button_up"]
[connection signal="button_down" from="Right" to="." method="_on_Right_button_down"]
[connection signal="button_up" from="Right" to="." method="_on_Right_button_up"]
